fix initial bugs in workflow

--- a/ts-build-check.yml
+++ b/ts-build-check.yml
@@ -24,8 +24,8 @@ jobs:
           npm run build
       - name: Compare Built Directories
         run: |
-          DIFF=$(diff $GITHUB_WORKSPACE/built-pr/lib $GITHUB_WORKSPACE/built-pr/lib -r)
-          if [ "$DIFF" != "" ]; then exit 1; else echo -e "PR contains up-to-date compiled JavaScript." fi
+          DIFF=$(diff $GITHUB_WORKSPACE/original-pr/lib $GITHUB_WORKSPACE/built-pr/lib -rqiEZbwBd)
+          if [ "$DIFF" != "" ]; then exit 1; else echo -e "PR contains up-to-date compiled JavaScript."; fi
       - name: Comment Unbuilt TypeScript
         if: failure()
         uses: actions/github-script@v2
